--- a/package.json
+++ b/package.json
@@ -18,11 +18,13 @@
     "registry": "https://registry.npmjs.org/"
   },
   "devDependencies": {
+    "@types/configstore": "^4.0.0",
     "@types/prompts": "^2.0.8",
     "@typescript-eslint/eslint-plugin": "^2.14.0",
     "@typescript-eslint/parser": "^2.14.0",
     "@zeit/ncc": "^0.22.3",
     "commander": "^5.1.0",
+    "configstore": "^5.0.1",
     "cross-fetch": "^3.0.5",
     "eslint": "^6.7.2",
     "eslint-config-prettier": "^6.9.0",
