--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@segersniels/gitmoji",
-  "version": "1.1.1",
+  "version": "1.2.0-beta.0",
   "main": "dist/index.js",
   "bin": {
     "gitmoji": "dist/index.js"
