--- a/.github/workflows/release.yaml
+++ b/.github/workflows/release.yaml
@@ -7,6 +7,10 @@ on:
 jobs:
   build:
     runs-on: ubuntu-latest
+    env:
+      NPM_TOKEN: ${{ secrets.NPM_TOKEN }}
+    outputs:
+      version: ${{ steps.current_version.outputs.current-version }}
     steps:
       - name: Checkout
         uses: actions/checkout@v1
@@ -30,31 +34,40 @@ jobs:
         run: |
           yarn build
           node dist/index.js --help
+      - name: Configure registry
+        run: echo "//registry.npmjs.org/:_authToken=${NPM_TOKEN}" > .npmrc
+      - name: Get current package.json version
+        id: current_version
       - name: Persist artifact
         uses: actions/upload-artifact@v2
         with:
-          name: dist
-          path: dist
+          name: artifacts
+          path: |
+            .npmrc
+            dist
 
-  release:
+  beta:
     runs-on: ubuntu-latest
     needs: build
-    env:
-      NPM_TOKEN: ${{ secrets.NPM_TOKEN }}
+    if: contains(needs.build.outputs.version, 'beta') && (startsWith(github.event.head_commit.message, ':bookmark:') || startsWith(github.event.head_commit.message, ':green_heart:'))
     steps:
       - name: Checkout
         uses: actions/checkout@v1
       - name: Grab persisted artifact
         uses: actions/download-artifact@v2
         with:
-          name: dist
-      - name: Configure registry
-        run: echo "//registry.npmjs.org/:_authToken=${NPM_TOKEN}" > .npmrc
-      - name: Release
-        run: |
-          VERSION=$(cat package.json |grep version)
-          if [[ "${VERSION}" == *"beta"* ]]; then
-            yarn publish:beta
-          else
-            yarn publish:master
-          fi
+          name: artifacts
+      - run: yarn publish:beta
+
+  release:
+    runs-on: ubuntu-latest
+    needs: build
+    if: "!contains(needs.build.outputs.version, 'beta') && (startsWith(github.event.head_commit.message, ':bookmark:') || startsWith(github.event.head_commit.message, ':green_heart:'))"
+    steps:
+      - name: Checkout
+        uses: actions/checkout@v1
+      - name: Grab persisted artifact
+        uses: actions/download-artifact@v2
+        with:
+          name: artifacts
+      - name: yarn publish:master
