--- a/.github/workflows/release.yaml
+++ b/.github/workflows/release.yaml
@@ -38,6 +38,7 @@ jobs:
         run: echo "//registry.npmjs.org/:_authToken=${NPM_TOKEN}" > .npmrc
       - name: Get current package.json version
         id: current_version
+        uses: martinbeentjes/npm-get-version-action@master
       - name: Persist artifact
         uses: actions/upload-artifact@v2
         with:
