--- a/tsconfig.json
+++ b/tsconfig.json
@@ -22,7 +22,8 @@
     "baseUrl": ".",
     "paths": {
       "*": ["src/*"],
-      "package": ["package.json"]
+      "package": ["package.json"],
+      "fallback": ["src/fallback.json"]
     }
   },
   "exclude": ["node_modules", "**/node_modules/*"]
